update: Bingo formulas and hit periods simulator features added

--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
                         </div>
                     </div>
 
+                    <p class="sim-desc mt-1" id="hit-periods-desc" style="display: none;">這些選號您總共連中了幾期？</p>
+                    <div class="input-group" id="hit-periods-group" style="display: none;">
+                        <div class="hit-selector-wrapper">
+                            <input type="range" id="hit-periods-count" min="1" max="1" value="1" class="glass-range">
+                            <span id="hit-periods-display" class="large-number">1 期</span>
+                        </div>
+                    </div>
+
                     <div class="toggle-group mt-1" id="super-hit-container" style="display: none;">
                         <label class="switch-container highlight-gold">
                             <input type="checkbox" id="super-hit-toggle">
