--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     
                     <div class="input-grid">
                         <div class="input-group">
-                            <label for="star-select">⭐ 選擇星數 (1-10星)</label>
+                            <label for="star-select">⭐ 選擇星數 (1-10星)<span id="star-recommendation-badge" class="badge highlight ml-1" style="display:none;font-size:0.7em;"></span></label>
                             <select id="star-select" class="glass-select">
                                 <option value="1">1 星</option>
                                 <option value="2">2 星</option>
@@ -92,6 +92,7 @@
                                 <option value="9">9 星</option>
                                 <option value="10">10 星</option>
                             </select>
+                            <div id="star-ev-desc" style="font-size: 0.75em; color: #64748b; margin-top: 4px; line-height: 1.3;"></div>
                         </div>
 
                         <div class="input-group">
