--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
                                 <option value="9">9 星</option>
                                 <option value="10">10 星</option>
                             </select>
-                            <div id="star-ev-desc" style="font-size: 0.75em; color: #64748b; margin-top: 4px; line-height: 1.3;"></div>
+                            <div class="roi-visualizer-container">
+                                <div id="roi-bars" class="roi-bars-wrapper"></div>
+                                <div id="star-ev-desc" class="roi-desc-text"></div>
+                            </div>
                         </div>
 
                         <div class="input-group">
